# git-cryptx

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ZH.md  build-cross-zig.sh  build-cross.sh  config.toml
locales/: en.ftl  zh.ftl
src/: crypto.rs  lib.rs  main.rs
src/commands/: func.rs  mod.rs
src/util/: git.rs  i18n.rs  logger.rs  mod.rs
