[package]
name = "git-cryptx"
version = "1.0.0"
edition = "2021"
authors = ["ChrisHyperFunc"]
description = "A tool for encrypting sensitive files in Git repositories"
license = "MIT"

[lib]
name = "git_cryptx"
path = "src/lib.rs"

[[bin]]
name = "git-cryptx"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
sha2 = "0.10"
thiserror = "1.0"
toml = "0.5"
fluent = "0.16.1"
fluent-bundle = "0.15.3"
unic-langid = "0.9"

[dev-dependencies]